# PolyEdge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  mise.toml  pyproject.toml
adapters/: market_api.py  trade_client.py
backtest/: backtest_rest.py  batch-download.py  binance_rest.py  download-binance.py  download-market.py  interval-binance.py  interval-market.py
backtests/: batch_download.py  binance_rest.py  download_binance.py  download_market.py  interval_binance.py  interval_market.py  rest.py
bitcoin/: Cargo.toml
bitcoin/src/: aggregate.rs  dashboard.html  dashboard.rs  exchanges.rs  main.rs
bitcoin/src/exchanges/: binance.rs  bitstamp.rs  bybit.rs  coinbase.rs  gemini.rs
bitcoin/src/feeds/: coinbase.rs
common/: time.py
domain/: btc_market.py  market.py  order.py
execution/: trade_client.py  trade_intent.py  trader.py
indicators/: indicator.py
markets/: btc.py
models/: btc_market.py  market.py  market_order.py  metadata.py  order.py
runtime/: components.py  indicator_engine.py  market_state.py  runner.py  strategy_engine.py  workers.py
schemas/: http_responses.py
src/: app.py  enums.py  event_bus.py  main.py  registry.py
strategies/: context.py  logging_strategy.py  s2_90s_strategy.py  strategy.py  superman.py  target.py
streams/: crypto_price_event.py  crypto_stream.py  market_order_event.py  market_price_event.py  market_price_stream.py  market_stream.py  market_trade_event.py  market_trade_stream.py
trade/: execution_engine.py  managed_order.py  market_order.py  models.py  (+1 more)
(+108 files in other folders)
